src/index.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *)); /*Allowing users to select their preferred theme */

@font-face {
    font-family: Rubik;
    font-weight: 100 900;
    font-display: swap;
    src: url("./assets/fonts/Rubik-VariableFont_wght.ttf") format("truetype");
}

.background {
    @apply bg-ghost-white bg-[url('/src/assets/images/pattern-background-mobile-light.svg')] bg-no-repeat bg-cover md:bg-[url('/src/assets/images/pattern-background-tablet-light.svg')] md:flex md:items-center md:justify-center xxl:bg-[url('/src/assets/images/pattern-background-desktop-light.svg')];

    @apply dark:bg-dark-slate dark:bg-[url('/src/assets/images/pattern-background-mobile-dark.svg')] md:bg-[url('/src/assets/images/pattern-background-tablet-dark.svg')] xxl:bg-[url('/src/assets/images/pattern-background-desktop-dark.svg')];
}

@theme {
    --color-vivid-violet: hsl(277, 91%, 56%);
    --color-dark-slate: hsl(216, 25%, 25%);
    --color-steel-blue: hsl(215, 27%, 32%);
    --color-slate-gray: hsl(219, 13%, 44%);
    --color-light-blue: hsl(216, 47%, 78%);
    --color-ghost-white: hsl(220, 38%, 97%);
    --color-spring-green: hsl(151, 70%, 50%);
    --color-soft-red: hsl(0, 82%, 63%);
    /*Font*/
    --font-display: "Rubik", sans-serif;

    --text-display: 9rem;
    --text-display--line-height: 100%;

    --text-heading-large: 4rem;
    --text-heading-large--line-height: 100%;

    --text-heading-medium: 2.25rem;
    --text-heading-medium--line-height: 100%;

    --text-heading-small: 1.75rem;
    --text-heading-small--line-height: 100%;

    --text-body: 0.75rem;
    --text-body--line-height: 150%;

    --text-body-small: 1.25rem;
    --text-body-small--line-height: 150%;

    --text-body-medium: 1.5rem;
    --text-body-medium--line-height: 150%;
    /*Breakpoint*/
    --breakpoint-xxl: 90rem;
}

